fix: Add vitro-languages-home-core as installer dependency to have Vitro RDF internationalization files

--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -110,5 +110,11 @@
             <version>${project.version}</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vitro-languages-home-core</artifactId>
+            <version>${project.version}</version>
+            <type>tar.gz</type>
+        </dependency>
     </dependencies>
 </project>
