--- a/api/pom.xml
+++ b/api/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.11.RELEASE</version>
+            <version>5.3.18</version>
         </dependency>
 
         <dependency>
