--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -53,6 +53,13 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-languages-webapp-ru_RU</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
+
     </dependencies>
 
     <build>
