--- a/ru_RU/pom.xml
+++ b/ru_RU/pom.xml
@@ -3,11 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
-    <artifactId>vivo-languages</artifactId>
+    <artifactId>vivo-languages-ru_RU</artifactId>
     <version>1.12.3-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>VIVO Languages</name>
+    <parent>
+        <groupId>org.vivoweb</groupId>
+        <artifactId>vivo-languages</artifactId>
+        <version>1.12.3-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
+    <name>VIVO Languages ru_RU</name>
     <description>VIVO Languages</description>
     <url>http://vivoweb.org/</url>
 
@@ -62,6 +67,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <modules>
+        <module>home</module>
+        <module>webapp</module>
+    </modules>
 
     <profiles>
         <profile>
@@ -143,19 +152,6 @@
                             <revisionOnScmFailure>Detached</revisionOnScmFailure>
                         </configuration>
                     </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
                 </plugins>
             </build>
         </profile> 
@@ -221,14 +217,4 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
-    <modules>
-    	<module>core</module>
-    	<module>en_CA</module>
-    	<module>en_US</module>
-    	<module>es</module>
-    	<module>fr_CA</module>
-    	<module>de_DE</module>
-    	<module>pt_BR</module>
-    	<module>ru_RU</module>
-    </modules>
 </project>
