--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,12 @@ jobs:
       - name: Clone Vitro
         run: git clone https://github.com/vivo-project/Vitro.git ../Vitro
 
+      - name: Clone Vitro-languages
+        run: git clone https://github.com/vivo-project/Vitro-languages.git ../Vitro-languages
+
+      - name: Clone VIVO-languages
+        run: git clone https://github.com/vivo-project/VIVO-languages.git ../VIVO-languages
+
       - name: Maven Cache
         uses: actions/cache@v2
         with:
@@ -28,4 +34,10 @@ jobs:
           java-version: 11
 
       - name: Maven Build
-        run: mvn clean package -s installer/example-settings.xml
+        run: |
+          cd ../Vitro-languages
+          mvn clean install
+          cd ../VIVO-languages
+          mvn clean install
+          cd ../VIVO
+          mvn clean package -s installer/example-settings.xml
