--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Clone Vitro
         run: git clone https://github.com/vivo-project/Vitro.git ../Vitro
 
+      - name: Clone Vitro-languages
+        run: git clone https://github.com/vivo-project/Vitro-languages.git ../Vitro-languages
+
+      - name: Clone VIVO-languages
+        run: git clone https://github.com/vivo-project/VIVO-languages.git ../VIVO-languages
+
       - name: Maven Cache
         uses: actions/cache@v2
         with:
@@ -32,7 +38,13 @@ jobs:
           java-version: 11
 
       - name: Maven Build
-        run: mvn clean package -s installer/example-settings.xml
+        run: |
+          cd ../Vitro-languages
+          mvn clean install
+          cd ../VIVO-languages
+          mvn clean install
+          cd ../VIVO
+          mvn clean package -s installer/example-settings.xml
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
