Localization of VIVO into Serbian (Latin script) (#105)
* Initial comit

* Changed file names, and translated the first half of initialTBoxAnnotations

* Fixed ^M at the end of a line

* Fixed majority of mistakes pointed out within vivo_all.properties file

* Fixed few more files that required changes

* Translated the final file for VIVO-languages

* fixed translation of 'individual'

* fixed second round of requested changes

* Implemented changes requested by lidijaivanovic

* Changed pom.xml version within sr_Latn_RS to 1.12.3-SNAPSHOT

* Renamed ftl files to have sr_Latn_RS extention instead of sr_RS

--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -53,6 +53,12 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+         <dependency>
+            <groupId>org.vivoweb</groupId>
+            <artifactId>vivo-languages-webapp-sr_Latn_RS</artifactId>
+            <version>${project.version}</version>
+            <type>war</type>
+        </dependency>
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>vivo-languages-webapp-ru_RU</artifactId>
