--- a/sr_Latn_RS/pom.xml
+++ b/sr_Latn_RS/pom.xml
@@ -3,12 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
-    <artifactId>vivo-languages</artifactId>
+    <artifactId>vivo-languages-sr_Latn_RS</artifactId>
     <version>1.12.3-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>VIVO Languages</name>
-    <description>VIVO Languages</description>
+    <parent>
+        <groupId>org.vivoweb</groupId>
+        <artifactId>vivo-languages</artifactId>
+        <version>1.12.3-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
+    <name>VIVO Languages sr_Latn_RS</name>
+    <description>VIVO Languages for sr_Latn_RS</description>
     <url>http://vivoweb.org/</url>
 
     <licenses>
@@ -19,28 +24,7 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <name>Graham Triggs</name>
-            <email>gtriggs@duraspace.org</email>
-            <organization>DuraSpace</organization>
-            <organizationUrl>http://vivoweb.org/</organizationUrl>
-        </developer>
-        <developer>
-            <name>Jim Blake</name>
-            <email>jeb228@cornell.edu</email>
-            <organization>Cornell University Library</organization>
-            <organizationUrl>https://github.com/j2blake</organizationUrl>
-        </developer>
-        <developer>
-            <name>John Fereira</name>
-            <email>jaf30@cornell.edu</email>
-            <organization>Cornell University</organization>
-            <organizationUrl>https://github.com/fereira</organizationUrl>
-        </developer>
-    </developers>
-
-    <!--
+   <!--
        The SCM repository location is used by Continuum to update against
        when changes have occurred.  This spawns a new build cycle and releases
        snapshots into the snapshot repository below.
@@ -62,6 +46,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <modules>
+        <module>home</module>
+        <module>webapp</module>
+    </modules>
 
     <profiles>
         <profile>
@@ -221,15 +209,4 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
-    <modules>
-    	<module>core</module>
-    	<module>en_CA</module>
-    	<module>en_US</module>
-    	<module>es</module>
-    	<module>fr_CA</module>
-    	<module>de_DE</module>
-    	<module>pt_BR</module>
-    	<module>sr_Latn_RS</module>
-    	<module>ru_RU</module>
-    </modules>
 </project>
