Update deploy.yml, fixing CI issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,13 @@ jobs:
 
       - name: Clone Vitro
         run: git clone https://github.com/vivo-project/Vitro.git ../Vitro
+        
+      - name: Clone Vitro-languages
+        run: git clone https://github.com/vivo-project/Vitro-languages.git ../Vitro-languages
+
+      - name: Clone VIVO-languages
+        run: git clone https://github.com/vivo-project/VIVO-languages.git ../VIVO-languages
+
 
       - name: Maven Cache
         uses: actions/cache@v2
@@ -35,7 +42,13 @@ jobs:
           server-password: MAVEN_PASSWORD
 
       - name: Maven Deploy
-        run: mvn --batch-mode deploy -Pskip
+        run: |
+          cd ../Vitro-languages
+          mvn clean install
+          cd ../VIVO-languages
+          mvn clean install
+          cd ../VIVO
+          mvn --batch-mode deploy -Pskip
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
