--- a/sr_Latn_RS/webapp/pom.xml
+++ b/sr_Latn_RS/webapp/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages-webapp-sr_Latn_RS</artifactId>
-    <version>1.13.0</version>
+    <version>1.13.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-languages-sr_Latn_RS</artifactId>
-        <version>1.13.0</version>
+        <version>1.13.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
