--- a/de_DE/pom.xml
+++ b/de_DE/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages_de_DE</artifactId>
-    <version>1.13.0</version>
+    <version>1.13.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>VIVO Languages de_DE</name>
@@ -215,6 +215,6 @@
     <parent>
     	<groupId>org.vivoweb</groupId>
     	<artifactId>vivo-languages</artifactId>
-    	<version>1.13.0</version>
+    	<version>1.13.1-SNAPSHOT</version>
     </parent>
 </project>
