--- a/fr_CA/pom.xml
+++ b/fr_CA/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-languages-fr_CA</artifactId>
-    <version>1.13.1-SNAPSHOT</version>
+    <version>1.13.0</version>
     <packaging>pom</packaging>
 
     <name>VIVO Languages fr_CA</name>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-languages</artifactId>
-        <version>1.13.1-SNAPSHOT</version>
+        <version>1.13.0</version>
         <relativePath>..</relativePath>
     </parent>
     <licenses>
