fixed email settings example

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -68,13 +68,16 @@ argon2.time = 1000
 # VitroConnection.DataSource.password = vitrodbPassword
 
   #
-  # Email parameters which VIVO can use to send mail. If these are left empty,
+  # Email parameters VIVO uses to send email. If these are left empty,
   # the "Contact Us" form will be disabled and users will not be notified of
   # changes to their accounts.
-  #   Example:
-  #     email.smtpHost = smtp.mydomain.edu
-  #     email.replyTo = vivoAdmin@mydomain.edu
-  #
+  # Example:
+  # email.smtpHost = smtp.mydomain.edu
+  # email.replyTo = vitroAdmin@mydomain.edu
+  # email.username = vivtroAdmin@mydomain.edu
+  # email.password = secret
+  # email.port = 25 or 587
+
 # email.smtpHost =
 # email.replyTo =
 
