Cleaning up dependency on VIVO-languages and Vitro-languages

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -223,7 +223,8 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
   #
   # A list of supported languages or Locales that the user may choose to
   # use instead of the one specified by the browser. The selected language(s)
-  # must exist in the VIVO-languages repository. This affects
+  # must exist in the list of property files in webapps or in the list of ttl
+  # files in interface-i18n directories within VIVO home. This affects
   # RDF data retrieved from the model, if RDFService.languageFilter is true.
   # This also affects the text of pages that have been modified to support
   # multiple languages.
