--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -55,7 +55,12 @@
                                 </goals>
                                 <configuration>
                                     <target>
-                                        <delete dir="${vivo-dir}/rdf" />
+                                        <delete includeemptydirs="true">
+                                            <fileset dir="${vivo-dir}/rdf">
+                                                <include name="**/*"/>
+                                                <exclude name="**/i18n/*_x_*/**"/>
+                                            </fileset>
+                                        </delete>
                                     </target>
                                 </configuration>
                             </execution>
