Adding an echo mechanism for maven properties

--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,63 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>echo-properties</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <target>
+                                <echo message="###################################################################" />
+                                <echo message="Displaying value of '${project.artifactId}' properties" />
+                                <echo message="###################################################################" />
+                                <echo message="[app-name]                   ${app-name}" />
+                                <echo message="[vivo-dir]                   ${vivo-dir}" />
+                                <echo message="[tomcat-dir]                 ${tomcat-dir}" />
+                                <echo message="[default-theme]              ${default-theme}" />
+                                <echo message="[vitro-version]              ${vitro-version}" />
+                                <echo message="[vivo-version]               ${vivo-version}" />
+                                <echo message="[vivo-dir]                   ${vivo-dir}" />
+                                <echo message="[project.version]            ${project.version}" />
+                                <echo message="[java.vendor.version]        ${java.vendor.version}" />
+                                <echo message="[java.version]               ${java.version}" />
+                                <echo message="[java.specification.version] ${java.specification.version}" />
+                                <echo message="###################################################################" />
+                                <echo message="###################################################################" />
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--Allows you to list all the properties used by Maven. Do <skip>false</skip> to activate the plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>echo-all-properties</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <skip>true</skip>
+                            <target>
+                                <echoproperties />
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
