VIVO 3821: Add configuration to disable or enable Map of Science visualization.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -404,6 +404,14 @@ http.createCacheHeaders = true
 visualization.temporal = enabled
 
   #
+  # The Map of Science visualization is limited in the number of supported journals.
+  # This will generally only be useful for institutions that specifically want this.
+  # This is disabled by default.
+  # Set this to either "disabled" to not utilize or "enabled" to utilize.
+  #
+visualization.mapOfScience = disabled
+
+  #
   # Types of individual for which we can create proxy editors.
   # If this is omitted, defaults to http://www.w3.org/2002/07/owl#Thing
   #
