--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -406,10 +406,10 @@ visualization.temporal = enabled
   #
   # The Map of Science visualization is limited in the number of supported journals.
   # This will generally only be useful for institutions that specifically want this.
-  # This is disabled by default.
+  # This is enabled by default.
   # Set this to either "disabled" to not utilize or "enabled" to utilize.
   #
-visualization.mapOfScience = disabled
+visualization.mapOfScience = enabled
 
   #
   # Types of individual for which we can create proxy editors.
