VIVO 3828: Remove SDB in preparation to moving to new Jena.
There are only comments and properties to remove.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -56,8 +56,8 @@ argon2.memory = 1024
 argon2.time = 1000
 
   #
-  # NOTE: VitroConnection.DataSource.* properties are only used in conjuction with
-  #       an SDB triple store.
+  # NOTE: VitroConnection.DataSource.* properties are only used by OpenSocial for
+  #       SQL database interaction.
   #
   # The basic parameters for a database connection. Change the end of the
   # URL to reflect your database name (if it is not "vitrodb"). Change the username
@@ -152,21 +152,19 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
 # VitroConnection.DataSource.pool.maxIdle = 10
 
 # -----------------------------------------------------------------------------
-# USING A DIFFERENT DATABASE
+# USING AN SQL DATABASE
 # -----------------------------------------------------------------------------
 
   #
   # Parameters to change in order to use VIVO with a database other than
-  # MySQL.
+  # MySQL. This may be required for OpenSocial.
   #
 # VitroConnection.DataSource.dbtype = MySQL
 # VitroConnection.DataSource.driver = com.mysql.jdbc.Driver
 # VitroConnection.DataSource.validationQuery = SELECT 1
 
-  # Note: the above parameters allow you to change the relational database that
-  # is used as the back end for Jena SDB. If you want to use a triple store
-  # other than SDB, you will need to edit applicationSetup.n3. See the
-  # installation instructions for more details.
+  # Note: you may need to edit applicationSetup.n3. See the installation
+  # instructions for more details.
 
 
 # -----------------------------------------------------------------------------
