--- a/pom.xml
+++ b/pom.xml
@@ -351,10 +351,10 @@
                 </executions>
                 <configuration>
                     <configLocation>
-                        duraspace-checkstyle/checkstyle.xml
+                        checkstyle.xml
                     </configLocation>
                     <suppressionsLocation>
-                        vitro-checkstyle/checkstyle-suppressions.xml
+                        checkstyle-suppressions.xml
                     </suppressionsLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
