Added configuration example for feature toggle.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -455,3 +455,6 @@ createAndLink.providers = doi, pmid
 #fileUpload.maxFileSize = 10485760
 #comma separated list of mime types allowed for upload
 #fileUpload.allowedMIMETypes = image/png, application/pdf
+
+# Feature toggle for forgot password functionality
+authentication.forgotPassword = enabled
