Added captcha configuration example.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -455,3 +455,11 @@ createAndLink.providers = doi, pmid
 #fileUpload.maxFileSize = 10485760
 #comma separated list of mime types allowed for upload
 #fileUpload.allowedMIMETypes = image/png, application/pdf
+
+# Captcha configuration. Available implementations are: DEFAULT (text-based) and RECAPTCHA
+# If captcha.implementation property is not provided, system will fall back to DEFAULT implementation
+# For RECAPTCHA method, you have to provide siteKey and secretKey.
+# More information on siteKey and secretKey is available on: https://www.google.com/recaptcha
+captcha.implementation = DEFAULT
+#recaptcha.siteKey =
+#recaptcha.secretKey =
