Added captcha feature toggle with difficulty setting.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -462,6 +462,7 @@ createAndLink.providers = doi, pmid
 # with easy diffuculty (if captcha is enabled)
 # For RECAPTCHA method, you have to provide siteKey and secretKey.
 # More information on siteKey and secretKey is available on: https://www.google.com/recaptcha
+# Only RECAPTCHAv2 implementation is supported
 captcha.enabled = true
 captcha.implementation = NANOCAPTCHA
 nanocaptcha.difficulty = hard
