--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -465,7 +465,7 @@ createAndLink.providers = doi, pmid
 # Only recaptchav2 implementation is supported
 captcha.enabled = true
 captcha.implementation = nanocaptcha
-nanocaptcha.difficulty = hard
+nanocaptcha.difficulty = easy
 #recaptcha.siteKey =
 #recaptcha.secretKey =
 
