Added captcha configuration example. (#3920)
* Added captcha configuration example.

* Updated captcha configuration.

* Added captcha feature toggle with difficulty setting.

* Updated configuration docs.

* Update home/src/main/resources/config/example.runtime.properties

Co-authored-by: Georgy Litvinov <git@litvinovg.pro>

---------

Co-authored-by: Georgy Litvinov <git@litvinovg.pro>

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -455,3 +455,17 @@ createAndLink.providers = doi, pmid
 #fileUpload.maxFileSize = 10485760
 #comma separated list of mime types allowed for upload
 #fileUpload.allowedMIMETypes = image/png, application/pdf
+
+# Captcha configuration. Available implementations are: nanocaptcha (text-based) and recaptchav2
+# nanocaptcha is available in 2 difficulties (easy and hard)
+# If captcha.implementation property is not provided, system will fall back to nanocaptcha implementation
+# with easy diffuculty (if captcha is enabled)
+# For recaptchav2 method, you have to provide siteKey and secretKey.
+# More information on siteKey and secretKey is available on: https://www.google.com/recaptcha
+# Only recaptchav2 implementation is supported
+captcha.enabled = true
+captcha.implementation = nanocaptcha
+nanocaptcha.difficulty = easy
+#recaptcha.siteKey =
+#recaptcha.secretKey =
+
