--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -458,6 +458,7 @@ createAndLink.providers = doi, pmid
 
 # Feature toggle for forgot password functionality
 authentication.forgotPassword = enabled
+authentication.forgotPassword.notify-admin = true
 
 # Captcha configuration. Available implementations are: nanocaptcha (text-based) and recaptchav2
 # nanocaptcha is available in 2 difficulties (easy and hard)
