--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -457,7 +457,7 @@ createAndLink.providers = doi, pmid
 #fileUpload.allowedMIMETypes = image/png, application/pdf
 
 # Feature toggle for forgot password functionality
-authentication.forgotPassword = false
+authentication.forgotPassword = disabled
 authentication.forgotPassword.notify-admin = false
 
 # Captcha configuration. Available implementations are: nanocaptcha (text-based) and recaptchav2
