--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-api</artifactId>
-    <version>1.14.1</version>
+    <version>1.14.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-project</artifactId>
-        <version>1.14.1</version>
+        <version>1.14.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
