Updated example properties.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -456,7 +456,7 @@ createAndLink.providers = doi, pmid
 #comma separated list of mime types allowed for upload
 #fileUpload.allowedMIMETypes = image/png, application/pdf
 
-# Feature toggle for forgot password functionality
+# Feature toggle for forgot password functionality [enabled, disabled]
 authentication.forgotPassword = false
 authentication.forgotPassword.notify-admin = false
 
