--- a/installer/webapp/src/main/webResources/WEB-INF/classes/log4j.properties
+++ b/installer/webapp/src/main/webResources/WEB-INF/classes/log4j.properties
@@ -30,8 +30,12 @@ log4j.appender.AllAppender.MaxBackupIndex=10
 log4j.appender.AllAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.AllAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{1}] %m%n
 
+# Console appender configuration
+log4j.appender.ConsoleAppender=org.apache.log4j.ConsoleAppender
+log4j.appender.ConsoleAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.ConsoleAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{1}] %m%n
 
-log4j.rootLogger=INFO, AllAppender
+log4j.rootLogger=INFO, AllAppender, ConsoleAppender
 
 # These classes are too chatty to display INFO messages.
 log4j.logger.edu.cornell.mannlib.vitro.webapp.startup.StartupStatus=WARN
