--- a/.env
+++ b/.env
@@ -1,22 +1,11 @@
-# Variable substitution for docker-compose.yml
+LOCAL_SOLR_PORT=8983
+LOCAL_SOLR_DATA=./vivo-solr
+RESET_CORE=false
 
-# solr service variable substitution
-SOLR_RESET_CORE=false
-SOLR_VERBOSE=no
+LOCAL_VIVO_PORT=8080
+LOCAL_VIVO_HOME=./vivo-home
+RESET_HOME=false
 
-SOLR_HOST_PORT=8983
-SOLR_CONTAINER_PORT=8983
+VIVO_HOME=/usr/local/vivo/home
 
-SOLR_CORES=./vivo-cores
-
-# tomcat service variable substitution
-VIVO_RESET_HOME=false
-VIVO_VERBOSE=no
-
-VIVO_TDB_FILE_MODE=direct
-
-VIVO_HOST_VIVO_HOME=./vivo-home
-VIVO_CONTAINER_VIVO_HOME=/usr/local/vivo/home
-
-VIVO_HOST_PORT=8080
-VIVO_CONTAINER_PORT=8080
+VERBOSE=no
