Added example configuration for ES.

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -81,7 +81,7 @@ argon2.time = 1000
 # email.smtpHost =
 # email.replyTo =
 
-  #
+  # WARNING: Deprecated, switch to using vitro.local.searchengine.url as explained below
   # URL of Solr context used in local VIVO search. This will usually consist of:
   #     scheme + server_name + port + "solr" + solr_core_name
   # In a standard Solr installation, the Solr service will be available on port
@@ -92,6 +92,8 @@ argon2.time = 1000
   #
 vitro.local.solr.url = http://localhost:8983/solr/vivocore
 
+# URL of generic searchengine context (Supports Solr, Elasticsearch and Opensearch)
+# vitro.local.searchengine.url = http://localhost:8983/solr/vivocore
 
 # -----------------------------------------------------------------------------
 # LINKING USER ACCOUNTS TO PROFILE PAGES
