--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -95,6 +95,11 @@ vitro.local.solr.url = http://localhost:8983/solr/vivocore
 # URL of generic searchengine context (Supports Solr, Elasticsearch and Opensearch)
 # vitro.local.searchengine.url = http://localhost:8983/solr/vivocore
 
+# If basic authentication is supported for connection to you search engine instance,
+# the credentials should be provided below
+#vitro.local.searchengine.username =
+#vitro.local.searchengine.password =
+
 # -----------------------------------------------------------------------------
 # LINKING USER ACCOUNTS TO PROFILE PAGES
 # -----------------------------------------------------------------------------
