Change Vitro to VIVO home in a comment

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -227,7 +227,7 @@ selfEditing.idMatchingProperty = http://vivo.mydomain.edu/ns#networkId
   # locales values. The first in the list will be selected as default locale 
   # when a user is accessing the application for the first time. The selected 
   # language(s) must exist in the list of property files in webapps or in the 
-  # list of ttl files in interface-i18n directories within Vitro home. This 
+  # list of ttl files in interface-i18n directories within VIVO home. This 
   # affects RDF data retrieved from the model, if RDFService.languageFilter is true.
   # This also affects the text of pages that have been modified to support
   # multiple languages.
